# UPPRPO-Project-NSU

./: .gitignore  CMakeLists.txt  README.md  ffmpegwrapper.cpp  ffmpegwrapper.hpp  main.cpp  operation_queue.json  operationfactory.cpp  operationfactory.hpp  parse_json.cpp  requirements.txt  test_ffmpeg.cpp  ui_PyQt5.py  videoeditor.cpp  videoeditor.hpp  videooperations.cpp  videooperations.hpp
SQL/: main.py  readme.md
SQL/users/: main.py  readme.md
SQL/videos/: main.py  readme.md
server/fastapi/: client.py  hello.txt  server.py
ui/: auth_window.py  hello_window.py  main.py  reg_log.py
